Wed Oct 28 11:58:21 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-7.h:
          Reverted: Tue Oct 27 19:40:59 UTC 2009  Olli Savia  <ops@iki.fi>
          It seems that VC7 doesn't support _get_osfhandle.

Wed Oct 28 11:54:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.h:
        * ace/Log_Msg.cpp:
          Use ACE_OS::strsignal() instead of sys_siglist.

        * ace/config-freebsd.h:
        * ace/config-linux-common.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
          Removed legacy sys_siglist related settings.

Wed Oct 28 06:30:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos5_g++.GNU:
          Added support for buildbits 64

Tue Oct 27 20:14:50 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS.inl:
          Removed some legacy code.

Tue Oct 27 19:40:59 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-7.h:
          Added missing ACE_FILENO_EQUIVALENT macro.

Tue Oct 27 19:35:06 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Fixed wrong logic with macros

Thu Oct 22 21:12:21 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Pipe.h (ACE_Pipe): Updated the document to correct a typo.
          Thanks to Matthew Carter <r_q_einstein-acetaobugs at yahoo dot
          com> for reporting this.

Tue Oct 27 10:01:51 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp:
        * ace/config-aix-5.x.h:
          strsignal fix for AIX.

Tue Oct 27 08:22:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_tiger.GNU:

          fixed typo.

Tue Oct 27 08:12:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-snowleopard.h: